fix settings button layout bug on itinerary summary page

--- a/app/component/summary.scss
+++ b/app/component/summary.scss
@@ -19,7 +19,6 @@
   input[type="date"], input[type="time"], input[type="text"], select, .time-mui > input {
     vertical-align: middle;
     text-align: left;
-    width: auto;
     height: 2.6em;
     margin: 0;
     padding: 0 1rem 0 $padding-small;
